static/css/main.css
@font-face {
  font-family: "Roboto";
  src:
    url("../fonts/Roboto/Roboto-Regular.woff2") format("woff2"),
    url("../fonts/Roboto/Roboto-Regular-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Roboto";
  src:
    url("../fonts/Roboto/Roboto-Italic.woff2") format("woff2"),
    url("../fonts/Roboto/Roboto-Italic.woff") format("woff");
  font-weight: normal;
  font-style: italic;
  font-display: swap;
}
* {
  font-family: "Roboto", sans-serif;
  box-sizing: border-box;
}

/* Page Setup for Styling */

html,
body {
  box-sizing: border-box;
  height: 100dvh;
  margin: 0;
}

body {
  display: flex;
  flex-direction: column;
}

.header-nav,
.footer {
  flex-shrink: 0;
  background-color: #1f2937;
}

.content {
  flex: 1 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.footer {
  display: flex;
  height: 60px;
  justify-content: center;
  align-items: center;
}

.content > div {
  flex: 1;
}

/* main styling starts here */

/* header navbar */
.header-nav {
  display: flex;
  padding: 8px;
  height: 60px;
}

.logo {
  display: flex;
  flex: 1;
  justify-content: center;
  align-items: center;
}

.nav-items {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 24px;
}

/* header content */

/* content-header parent div */
.content-header {
  background-color: #1f2937;
  color: #e5e7eb;
  padding: 48px;
  display: flex;
  gap: 128px;
}

/* .content-header-1 div and .content-header-2 div */
.content-header > * {
  display: flex;
  flex: 1 1 0;
  min-width: 0;
}

/* content-header-1 child div and items within */

.content-header-1 > div {
  display: flex;
  flex-direction: column;
  gap: 8px;
  align-self: center;
  padding: 0 25%;
}

.content-header-1 > div p {
  margin: 0;
  padding: 0;
}

#header-signup {
  margin-top: 4px;
}

/* content-header-2 child div and items within */

.content-header-2 > div {
  display: flex;
}

.content-header-2 > div img {
  flex: 1;
  width: 550px;
  object-fit: contain;
}

/* content 2 styling */
.content-2 {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: 10rem;
}

.content-2 > h1 {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1.5rem;
}

.content-2 > div {
  max-width: 12rem;
  text-align: center;
}

.content-2 > div img {
  display: block;
  object-fit: cover;
  width: 12rem;
  height: 12rem;
  border: 3.5px solid #3882f6;
  border-radius: 12px;
}

/* General Styles */

button {
  cursor: pointer;
  background-color: #3882f6;
  color: #f9faf8;
  width: 90px;
  height: 35px;
  padding: 10px;
  border-radius: 9px;
  font-weight: 900;
}

/* Font and Text */

.main-text {
  font-size: 48px;
  color: #f9faf8;
  font-weight: 900;
}

.secondary-text,
.nav-items li a {
  font-size: 18px;
  color: #e5e7eb;
  text-decoration: none;
}

.secondary-text-dark,
.content-2 > div p {
  font-size: 18px;
  color: #1f2937;
  text-decoration: none;
}

.logo-text {
  font-size: 24px;
  color: #f9faf8;
}

.info-header-text {
  font-size: 36px;
  color: #1f2937;
  font-weight: 900;
}

